<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alperen_coskun.SecondActivity">

    <TextView
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffff"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/cinsiyet"
        android:layout_below="@+id/textView2">

        <RadioButton
            android:id="@+id/erkek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:checked="true"
            android:text="@string/male"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <RadioButton
        android:text="@string/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/kadin"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
    </RadioGroup>

    <Button
        android:text="@string/thirdpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        style="@android:style/Widget.Material.Button"
        android:textColor="#FFFFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"/>

</RelativeLayout>
