<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alperen_coskun.FirstActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/welcome"
        android:gravity="center"
        android:background="@color/material_purple"
        android:textColor="#ffff"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_marginTop="32dp"
        android:id="@+id/fnameEdit"
        android:layout_centerHorizontal="true"
        android:hint="@string/fname"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/material_purple"
        android:textSelectHandle="@color/material_orange"
        android:textCursorDrawable="@color/material_orange"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="32dp"
        android:id="@+id/lnameEdit"
        android:layout_below="@+id/fnameEdit"
        android:layout_alignStart="@+id/fnameEdit"
        android:hint="@string/lname"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/material_purple"
        android:textSelectHandle="@color/material_orange"
        android:textCursorDrawable="@color/material_orange"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="32dp"
        android:id="@+id/numberEdit"
        android:layout_below="@+id/lnameEdit"
        android:layout_alignStart="@+id/lnameEdit"
        android:hint="@string/number"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/material_purple"
        android:textSelectHandle="@color/material_orange"
        android:textCursorDrawable="@color/material_orange"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondpage"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#FF9800" />


</RelativeLayout>
