<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fourth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="16dp"
    tools:context="com.alperen_coskun.FourthActivity">

    <TextView
        android:text="@string/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5"
        android:textAppearance="@android:style/TextAppearance.Material.Headline" />

    <TextView
        android:text="@string/firstpage"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/edit_icon"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView"
        android:clickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ilksayfa"
        android:background="@drawable/customtextbox"
        android:textSize="16sp"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="2dp" />

    <TextView
        android:text="@string/secondpage"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/ilksayfa"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />
    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/edit_icon"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView2"
        android:clickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ikincisayfa"
        android:background="@drawable/customtextbox"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />

    <TextView
        android:text="@string/thirdpage"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/ikincisayfa"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />
    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/edit_icon"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView3"
        android:clickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ucuncusayfa"
        android:background="@drawable/customtextbox"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:scrollbars="vertical"
        android:maxLines="20"
        />






</RelativeLayout>
